<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_723053_1920"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="🅸🅽🆃🅴🅻🅻🅸🆃🅾🆄🆁🅸🆂🆃"
        android:textColor="@android:color/white"
        android:textSize="26dp"
        app:layout_constraintBottom_toTopOf="@+id/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <EditText
        android:id="@+id/UserNameTF"
        android:layout_width="289dp"
        android:layout_height="45dp"
        android:drawableLeft="@drawable/ic_action_email"
        android:ems="10"
        android:hint="Enter User Name"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/EmailAddressTF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.485" />

    <EditText
        android:id="@+id/EmailAddressTF"
        android:layout_width="291dp"
        android:layout_height="47dp"
        android:layout_marginBottom="52dp"
        android:drawableLeft="@drawable/fui_ic_mail_white_24dp"
        android:ems="10"
        android:hint="Enter Your Email Address"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/PassTF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/PassTF"
        android:layout_width="288dp"
        android:layout_height="49dp"
        android:layout_marginBottom="284dp"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:ems="10"
        android:hint="Enter Your Password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="137dp"
        android:layout_height="58dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/button_background_one"
        android:text="Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PassTF"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already a user?"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regBtn"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/button"
        android:layout_width="98dp"
        android:layout_height="37dp"
        android:background="@android:color/transparent"
        android:text="Sign In Here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.141" />

</androidx.constraintlayout.widget.ConstraintLayout>